add purchase controller and edit validators and schema
