# config/openapi.json
@@ -138,7 +138,6 @@
               }
             }
           },
-         
           "500": {
             "description": "Internal error"
           }
@@ -200,7 +199,8 @@
           },
           "404": {
             "description": "Product not found"
-          } ,  "500": {
+          },
+          "500": {
             "description": "Internal error"
           }
         }
@@ -243,11 +243,11 @@
               }
             }
           },
-          "500": {
-            "description": "Internal error"
-          },
           "400": {
             "description": "Bad request"
+          },
+          "500": {
+            "description": "Internal error"
           }
         },
         "security": [
@@ -398,7 +398,6 @@
               }
             }
           },
-     
           "401": {
             "description": "Unauthorized"
           },
@@ -428,10 +427,10 @@
             "schema": {
               "type": "string"
             },
-            "required": true,
-            "summary": "purchase id"
+            "required": true
           }
         ],
+        "summary": "purchase id",
         "requestBody": {
           "content": {
             "application/json": {
@@ -518,16 +517,43 @@
       }
     }
   },
+  
   "components": {
     "schemas": {
-      "ProductResponse": {
+      "Variation": {
+        "$id":  "https://example.com/schemas/Variation",
+        
+        "type": "object",
+        "required": [
+          
+          "quantity",
+          "properties"
+        ],
+        "properties": {
+          "_id": {
+            "type": "string",
+            "example": 40
+          },
+          "quantity": {
+            "type": "integer",
+            "example": 50
+          },
+          "properties": {
+            "type": "object"
+          }
+        }
+      },
+      "Product": {
+        
         "type": "object",
         "required": [
           "name",
           "description",
           "price",
           "stock_quantity",
-          "is_visible"
+          "is_visible",
+          "variations"
+          
         ],
         "properties": {
           "name": {
@@ -550,6 +576,67 @@
             "type": "boolean",
             "example": true
           },
+          "product_images": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "example": "imageurl@aws.com"
+            }
+          },
+          "variations": {
+            "type": "array",
+            "items": {
+               "$ref": "https://example.com/schemas/Variation"
+            }
+          
+          }
+        }
+      },
+      "ProductResponse": {
+        "$id": "https://example.com/schemas/ProductResponse",
+        "type": "object",
+        "required": [
+          "name",
+          "description",
+          "price",
+          "stock_quantity",
+          "is_visible",
+          "variations"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "name"
+          },
+          "description": {
+            "type": "string",
+            "example": "description"
+          },
+          "price": {
+            "type": "number",
+            "example": 5000
+          },
+          "stock_quantity": {
+            "type": "integer",
+            "example": 50
+          },
+          "is_visible": {
+            "type": "boolean",
+            "example": true
+          },
+          "product_images": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "example": "imageurl@aws.com"
+            }
+          },
+          "variations": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Variation"
+            }
+          },
           "createdAt": {
             "type": "string",
             "format": "date-time"
@@ -559,7 +646,6 @@
             "format": "date-time"
           }
         }
-       
       },
       "UserResponse": {
         "type": "object",
@@ -587,14 +673,16 @@
           }
         }
       },
+  
       "PurchaseResponse": {
+        "$id": "https://example.com/schemas/PurchaseResponse",
         "type": "object",
         "required": [
           "quantity",
           "total_price",
           "status",
           "product_id",
-          "variation_id",
+          "variation",
           "user_id",
           "createdAt",
           "updatedAt",
@@ -617,9 +705,10 @@
             "type": "string",
             "example": "description"
           },
-          "variation_id": {
-            "type": "string",
-            "example": "variation_id"
+          "variation": {
+            
+             "$ref": "#/components/schemas/Variation"
+            
           },
           "total_price": {
             "type": "number",
@@ -639,38 +728,9 @@
           }
         }
       },
-      "Product": {
-        "type": "object",
-        "required": [
-          "name",
-          "description",
-          "price",
-          "stock_quantity",
-          "is_visible"
-        ],
-        "properties": {
-          "name": {
-            "type": "string",
-            "example": "name"
-          },
-          "description": {
-            "type": "string",
-            "example": "description"
-          },
-          "price": {
-            "type": "number",
-            "example": 5000
-          },
-          "stock_quantity": {
-            "type": "integer",
-            "example": 50
-          },
-          "is_visible": {
-            "type": "boolean",
-            "example": true
-          }
-        }
-      },
+
+      
+
       "UserSignup": {
         "type": "object",
         "required": [
@@ -693,13 +753,14 @@
         }
       },
       "Purchase": {
+        "$id": "/Purchase",
         "type": "object",
         "required": [
           "quantity",
           "total_price",
           "status",
           "product_id",
-          "variation_id"
+          "variation"
         ],
         "properties": {
           "status": {
@@ -710,9 +771,10 @@
             "type": "string",
             "example": "description"
           },
-          "variation_id": {
-            "type": "string",
-            "example": "variation_id"
+          "variation": {
+            "type": "object"
+             
+            
           },
           "total_price": {
             "type": "number",
